--- a/mat383/config.toml
+++ b/mat383/config.toml
@@ -1,4 +1,18 @@
 baseURL = 'https://mat383.com/'
 languageCode = 'en-us'
 title = "mat383.com (under construction)"
-theme = 'lugo'
+
+# Copied this from the Lugo theme (https://github.com/LukeSmithxyz/lugo)
+[params]
+  # "relatedtext" is the text that appears above the tag list at the bottom of pages.
+  relatedtext = "Related"
+  favicon = "/favicon.ico"
+
+  #list items
+  datesinlist = true
+  authorsinlist = true
+
+  #footer items
+  nextprev = true
+  taglist = true
+  showrss = true
