--- a/mat383/config.toml
+++ b/mat383/config.toml
@@ -2,6 +2,9 @@ baseURL = 'https://mat383.com/'
 languageCode = 'en-us'
 title = "mat383.com (under construction)"
 
+[markup.goldmark.renderer]
+  unsafe = true # Allow HTML in md files
+
 # Copied this from the Lugo theme (https://github.com/LukeSmithxyz/lugo)
 [params]
   # "relatedtext" is the text that appears above the tag list at the bottom of pages.
