--- a/mat383/config.toml
+++ b/mat383/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://mat383.com/'
 languageCode = 'en-us'
-title = "mat383.com (under construction)"
+title = "mat383.com"
 
 [markup.goldmark.renderer]
   unsafe = true # Allow HTML in md files
